[package]
name = "protocol"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.16.0"
byteorder = "1.4.3"
tokio = { version = "1.6.0", features = ["full"] }
tokio-byteorder = "0.3.0"
rand = "0.8.4"
hex = "0.4.3"
async-recursion = "0.3.2"