[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.0", features = ["full"] }
tokio-byteorder = "0.3.0"
tokio-stream = { version = "0.1.6", features = ["net"]}
storage = { path = "../storage" }