[package]
name = "store"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.16.0"
schema = { path = "../schema" }
protocol = { path = "../protocol" }
tokio = { version = "1.6.0", features = ["full"] }
async-trait = "0.1.50"